--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/*  font-family: 'Source Sans Pro', sans-serif;  */
 
 * {
     box-sizing: border-box;
@@ -49,7 +50,6 @@ h2 + p {
     font-weight: 900;
     text-transform: uppercase;
     order: -1;
-    border-top: 5px solid #F18119;
 }
 
 .fine-print {
@@ -65,7 +65,7 @@ strong { font-weight: 900; }
    ================= */
    
 .intro {
-    background-image: url(../images/dark-ribs.jpg);
+    background-image: url(images/dark-ribs.jpg);
     background-size: cover;
     background-color: #404040;
     background-position: center;
@@ -130,14 +130,8 @@ input {
 }
 
 .btn-primary {
-    background-image: linear-gradient(to left, #FF713B, #FFA51D);
+    background: linear-gradient(to left, #ff713b, #ffa51d);
     color: white;
-    transform: scale(1);
-    transition: transform 250ms;
-}
-
-.btn-primary:hover {
-    transform: scale(1.1);
 }
 
 /* =================
